chore: add infra compose and env wiring

--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,18 @@ POSTGRES_DB=hotelier_dev
 POSTGRES_USER=hotelier_dev
 POSTGRES_PASSWORD=hotelier_dev_password
 POSTGRES_PORT=5432
+
+# Shared database URL used by backend containers
 DATABASE_URL=postgresql://hotelier_dev:hotelier_dev_password@postgres:5432/hotelier_dev
-REDIS_PORT=6379
+
+# pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
 PGADMIN_PASSWORD=admin123
-NODE_ENV=development
+
+# Shared wiring ports
 API_PORT=3001
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=15m
-REFRESH_TOKEN_EXPIRES_IN=7d
 APP_PORT=3000
+
+# Public URLs used by the frontend (from browser)
 FRONTEND_URL=http://localhost:3000
 API_URL=http://localhost:3001/api
-WATCHPACK_POLLING=true
-NEXT_PUBLIC_API_URL=http://localhost:3001/api
-NEXT_PUBLIC_APP_URL=http://localhost:3000
