--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,15 @@ POSTGRES_USER=hotelier_dev
 POSTGRES_PASSWORD=hotelier_dev_password
 POSTGRES_PORT=5432
 
-# Shared database URL used by backend containers
+# Shared database URL used by backend containers (core services / API gateway)
 DATABASE_URL=postgresql://hotelier_dev:hotelier_dev_password@postgres:5432/hotelier_dev
+
+# Auth-service dedicated Postgres instance
+AUTH_POSTGRES_DB=hotelier_auth_dev
+AUTH_POSTGRES_USER=hotelier_auth_dev
+AUTH_POSTGRES_PASSWORD=hotelier_auth_dev_password
+AUTH_POSTGRES_PORT=5433
+AUTH_DATABASE_URL=postgresql://hotelier_auth_dev:hotelier_auth_dev_password@auth-postgres:5432/hotelier_auth_dev
 
 # pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
@@ -17,3 +24,6 @@ APP_PORT=3000
 # Public URLs used by the frontend (from browser)
 FRONTEND_URL=http://localhost:3000
 API_URL=http://localhost:3001/api
+
+# RabbitMQ URL used by backend containers
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
