chore: add per-service DB containers for auth and config

--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,21 @@ POSTGRES_PASSWORD=hotelier_dev_password
 POSTGRES_PORT=5432
 
 # Shared database URL used by backend containers (core services / API gateway)
-DATABASE_URL=postgresql://hotelier_dev:hotelier_dev_password@postgres:5432/hotelier_dev
+DATABASE_URL=postgresql://hotelier_dev:hotelier_dev_password@backend-db:5432/hotelier_dev
 
 # Auth-service dedicated Postgres instance
 AUTH_POSTGRES_DB=hotelier_auth_dev
 AUTH_POSTGRES_USER=hotelier_auth_dev
 AUTH_POSTGRES_PASSWORD=hotelier_auth_dev_password
 AUTH_POSTGRES_PORT=5433
-AUTH_DATABASE_URL=postgresql://hotelier_auth_dev:hotelier_auth_dev_password@auth-postgres:5432/hotelier_auth_dev
+AUTH_DATABASE_URL=postgresql://hotelier_auth_dev:hotelier_auth_dev_password@auth-service-db:5432/hotelier_auth_dev
+
+# Config-service dedicated Postgres instance
+CONFIG_POSTGRES_DB=hotelier_config_dev
+CONFIG_POSTGRES_USER=hotelier_config_dev
+CONFIG_POSTGRES_PASSWORD=hotelier_config_dev_password
+CONFIG_POSTGRES_PORT=5434
+CONFIG_DATABASE_URL=postgresql://hotelier_config_dev:hotelier_config_dev_password@config-service-db:5432/hotelier_config_dev
 
 # pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
