Parking micro service added

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,13 @@ CONFIG_POSTGRES_PASSWORD=hotelier_config_dev_password
 CONFIG_POSTGRES_PORT=5434
 CONFIG_DATABASE_URL=postgresql://hotelier_config_dev:hotelier_config_dev_password@config-service-db:5432/hotelier_config_dev
 
+# Parking-service dedicated Postgres instance
+PARKING_POSTGRES_DB=hotelier_parking_dev
+PARKING_POSTGRES_USER=hotelier_parking_dev
+PARKING_POSTGRES_PASSWORD=hotelier_parking_dev_password
+PARKING_POSTGRES_PORT=5435
+PARKING_DATABASE_URL=postgresql://hotelier_parking_dev:hotelier_parking_dev_password@parking-service-db:5432/hotelier_parking_dev
+
 # pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
 PGADMIN_PASSWORD=admin123
