--- a/compose.yaml
+++ b/compose.yaml
@@ -19,6 +19,30 @@ services:
       retries: 20
       start_period: 10s
 
+  parking-service-db:
+    image: postgres:18
+    container_name: hotelier-parking-service-db-dev
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${PARKING_POSTGRES_DB}
+      POSTGRES_USER: ${PARKING_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${PARKING_POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - parking_service_db_data:/var/lib/postgresql/data
+    ports:
+      - "${PARKING_POSTGRES_PORT}:5432"
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${PARKING_POSTGRES_USER} -d ${PARKING_POSTGRES_DB}",
+        ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+      start_period: 10s
+
   auth-service-db:
     image: postgres:18
     container_name: hotelier-auth-service-db-dev
@@ -112,6 +136,8 @@ services:
     depends_on:
       backend-db:
         condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:${API_PORT}/api || exit 1"]
       interval: 15s
@@ -157,6 +183,25 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  parking-service:
+    build:
+      context: ../hotelier-backend
+    container_name: hotelier-parking-service-dev
+    restart: unless-stopped
+    env_file:
+      - ../hotelier-backend/.env.docker
+    environment:
+      PARKING_DATABASE_URL: postgresql://${PARKING_POSTGRES_USER}:${PARKING_POSTGRES_PASSWORD}@parking-service-db:5432/${PARKING_POSTGRES_DB}
+    command: ["sh", "-c", "npx nest start parking-service --watch"]
+    volumes:
+      - ../hotelier-backend/src:/app/src
+      - /app/node_modules
+    depends_on:
+      parking-service-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   frontend:
     build:
       context: ../hotelier-frontend
@@ -179,4 +224,5 @@ volumes:
   backend_db_data:
   auth_service_db_data:
   config_service_db_data:
+  parking_service_db_data:
   pgadmin_data:
