chore: add notifications service to docker compose

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,13 @@ PARKING_POSTGRES_PASSWORD=hotelier_parking_dev_password
 PARKING_POSTGRES_PORT=5435
 PARKING_DATABASE_URL=postgresql://hotelier_parking_dev:hotelier_parking_dev_password@parking-service-db:5432/hotelier_parking_dev
 
+# Notifications-service dedicated Postgres instance
+NOTIFICATIONS_POSTGRES_DB=hotelier_notifications_dev
+NOTIFICATIONS_POSTGRES_USER=hotelier_notifications_dev
+NOTIFICATIONS_POSTGRES_PASSWORD=hotelier_notifications_dev_password
+NOTIFICATIONS_POSTGRES_PORT=5436
+NOTIFICATIONS_DATABASE_URL=postgresql://hotelier_notifications_dev:hotelier_notifications_dev_password@notifications-service-db:5432/hotelier_notifications_dev
+
 # pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
 PGADMIN_PASSWORD=admin123
