--- a/compose.yaml
+++ b/compose.yaml
@@ -91,6 +91,30 @@ services:
       retries: 20
       start_period: 10s
 
+  notifications-service-db:
+    image: postgres:18
+    container_name: hotelier-notifications-service-db-dev
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${NOTIFICATIONS_POSTGRES_DB}
+      POSTGRES_USER: ${NOTIFICATIONS_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${NOTIFICATIONS_POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - notifications_service_db_data:/var/lib/postgresql/data
+    ports:
+      - "${NOTIFICATIONS_POSTGRES_PORT}:5432"
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${NOTIFICATIONS_POSTGRES_USER} -d ${NOTIFICATIONS_POSTGRES_DB}",
+        ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+      start_period: 10s
+
   rabbitmq:
     image: rabbitmq:3-management
     container_name: hotelier-rabbitmq-dev
@@ -202,6 +226,25 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  notifications-service:
+    build:
+      context: ../hotelier-backend
+    container_name: hotelier-notifications-service-dev
+    restart: unless-stopped
+    env_file:
+      - ../hotelier-backend/.env.docker
+    environment:
+      NOTIFICATIONS_DATABASE_URL: postgresql://${NOTIFICATIONS_POSTGRES_USER}:${NOTIFICATIONS_POSTGRES_PASSWORD}@notifications-service-db:5432/${NOTIFICATIONS_POSTGRES_DB}
+    command: ["sh", "-c", "npx nest start notifications-service --watch"]
+    volumes:
+      - ../hotelier-backend/src:/app/src
+      - /app/node_modules
+    depends_on:
+      notifications-service-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   frontend:
     build:
       context: ../hotelier-frontend
@@ -225,4 +268,5 @@ volumes:
   auth_service_db_data:
   config_service_db_data:
   parking_service_db_data:
+  notifications_service_db_data:
   pgadmin_data:
