guest requests micro service completed

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,13 @@ NOTIFICATIONS_POSTGRES_PASSWORD=hotelier_notifications_dev_password
 NOTIFICATIONS_POSTGRES_PORT=5436
 NOTIFICATIONS_DATABASE_URL=postgresql://hotelier_notifications_dev:hotelier_notifications_dev_password@notifications-service-db:5432/hotelier_notifications_dev
 
+# Guest-requests-service dedicated Postgres instance
+GUEST_REQUESTS_POSTGRES_DB=hotelier_guest_requests_dev
+GUEST_REQUESTS_POSTGRES_USER=hotelier_guest_requests_dev
+GUEST_REQUESTS_POSTGRES_PASSWORD=hotelier_guest_requests_dev_password
+GUEST_REQUESTS_POSTGRES_PORT=5437
+GUEST_REQUESTS_DATABASE_URL=postgresql://hotelier_guest_requests_dev:hotelier_guest_requests_dev_password@guest-requests-service-db:5432/hotelier_guest_requests_dev
+
 # pgAdmin credentials
 PGADMIN_EMAIL=admin@hotelier.dev
 PGADMIN_PASSWORD=admin123
