staff and inventory micro services added

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,18 @@ NOTIFICATIONS_POSTGRES_PASSWORD=hotelier_notifications_dev_password
 NOTIFICATIONS_POSTGRES_PORT=5436
 NOTIFICATIONS_DATABASE_URL=postgresql://hotelier_notifications_dev:hotelier_notifications_dev_password@notifications-service-db:5432/hotelier_notifications_dev
 
+INVENTORY_POSTGRES_DB=hotelier_inventory_dev
+INVENTORY_POSTGRES_USER=hotelier_inventory_dev
+INVENTORY_POSTGRES_PASSWORD=hotelier_inventory_dev_password
+INVENTORY_POSTGRES_PORT=5438
+
+# Staff-service dedicated Postgres instance
+STAFF_POSTGRES_DB=hotelier_staff_dev
+STAFF_POSTGRES_USER=hotelier_staff_dev
+STAFF_POSTGRES_PASSWORD=hotelier_staff_dev_password
+STAFF_POSTGRES_PORT=5439
+STAFF_DATABASE_URL=postgresql://hotelier_staff_dev:hotelier_staff_dev_password@staff-service-db:5432/hotelier_staff_dev
+
 # Guest-requests-service dedicated Postgres instance
 GUEST_REQUESTS_POSTGRES_DB=hotelier_guest_requests_dev
 GUEST_REQUESTS_POSTGRES_USER=hotelier_guest_requests_dev
