--- a/compose.yaml
+++ b/compose.yaml
@@ -115,6 +115,54 @@ services:
       retries: 20
       start_period: 10s
 
+  inventory-service-db:
+    image: postgres:18
+    container_name: hotelier-inventory-service-db-dev
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${INVENTORY_POSTGRES_DB}
+      POSTGRES_USER: ${INVENTORY_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${INVENTORY_POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - inventory_service_db_data:/var/lib/postgresql/data
+    ports:
+      - "${INVENTORY_POSTGRES_PORT}:5432"
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${INVENTORY_POSTGRES_USER} -d ${INVENTORY_POSTGRES_DB}",
+        ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+      start_period: 10s
+
+  staff-service-db:
+    image: postgres:18
+    container_name: hotelier-staff-service-db-dev
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: ${STAFF_POSTGRES_DB}
+      POSTGRES_USER: ${STAFF_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${STAFF_POSTGRES_PASSWORD}
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - staff_service_db_data:/var/lib/postgresql/data
+    ports:
+      - "${STAFF_POSTGRES_PORT}:5432"
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${STAFF_POSTGRES_USER} -d ${STAFF_POSTGRES_DB}",
+        ]
+      interval: 5s
+      timeout: 3s
+      retries: 20
+      start_period: 10s
+
   guest-requests-service-db:
     image: postgres:18
     container_name: hotelier-guest-requests-service-db-dev
@@ -188,11 +236,11 @@ services:
       rabbitmq:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:${API_PORT}/api || exit 1"]
+      test: ["CMD-SHELL", "curl -fsS http://localhost:${API_PORT}/api || exit 1"]
       interval: 15s
       timeout: 10s
-      retries: 5
-      start_period: 60s
+      retries: 10
+      start_period: 240s
 
   auth-service:
     build:
@@ -274,6 +322,46 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  staff-service:
+    build:
+      context: ../hotelier-backend
+    container_name: hotelier-staff-service-dev
+    restart: unless-stopped
+    env_file:
+      - ../hotelier-backend/.env.docker
+    environment:
+      STAFF_DATABASE_URL: postgresql://${STAFF_POSTGRES_USER}:${STAFF_POSTGRES_PASSWORD}@staff-service-db:5432/${STAFF_POSTGRES_DB}
+    command: ["sh", "-c", "npx nest start staff-service --watch"]
+    volumes:
+      - ../hotelier-backend/apps:/app/apps
+      - ../hotelier-backend/libs:/app/libs
+      - /app/node_modules
+    depends_on:
+      staff-service-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
+  inventory-service:
+    build:
+      context: ../hotelier-backend
+    container_name: hotelier-inventory-service-dev
+    restart: unless-stopped
+    env_file:
+      - ../hotelier-backend/.env.docker
+    environment:
+      INVENTORY_DATABASE_URL: postgresql://${INVENTORY_POSTGRES_USER}:${INVENTORY_POSTGRES_PASSWORD}@inventory-service-db:5432/${INVENTORY_POSTGRES_DB}
+    command: ["sh", "-c", "npx nest start inventory-service --watch"]
+    volumes:
+      - ../hotelier-backend/apps:/app/apps
+      - ../hotelier-backend/libs:/app/libs
+      - /app/node_modules
+    depends_on:
+      inventory-service-db:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   guest-requests-service:
     build:
       context: ../hotelier-backend
@@ -318,5 +406,7 @@ volumes:
   config_service_db_data:
   parking_service_db_data:
   notifications_service_db_data:
+  inventory_service_db_data:
+  staff_service_db_data:
   guest_requests_service_db_data:
   pgadmin_data:
