chore(infra): add dedicated database containers for remaining services
- Add booking-service dedicated Postgres instance with environment variables
- Add operations-service dedicated Postgres instance with environment variables
- Add events-service dedicated Postgres instance with environment variables
- Add restaurant-service dedicated Postgres instance with environment variables
- Add recreational-service dedicated Postgres instance with environment variables
- Add billing-service dedicated Postgres instance with environment variables
- Add reports-service dedicated Postgres instance with environment variables
- Add audit-service dedicated Postgres instance with environment variables
- Add dashboard-service dedicated Postgres instance with environment variables
- Configure unique ports (5440-5448) for each service database
- Add health checks for all new database containers
- Add persistent volumes for each service database
- Update .env.example with all new service database configurations
- Ensure database isolation and independent scaling for each microservice

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,67 @@ API_URL=http://localhost:3001/api
 
 # RabbitMQ URL used by backend containers
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+
+
+# Booking-service dedicated Postgres instance
+BOOKING_POSTGRES_DB=hotelier_booking_dev
+BOOKING_POSTGRES_USER=hotelier_booking_dev
+BOOKING_POSTGRES_PASSWORD=hotelier_booking_dev_password
+BOOKING_POSTGRES_PORT=5440
+BOOKING_DATABASE_URL=postgresql://hotelier_booking_dev:hotelier_booking_dev_password@booking-service-db:5432/hotelier_booking_dev
+
+# Operations-service dedicated Postgres instance
+OPERATIONS_POSTGRES_DB=hotelier_operations_dev
+OPERATIONS_POSTGRES_USER=hotelier_operations_dev
+OPERATIONS_POSTGRES_PASSWORD=hotelier_operations_dev_password
+OPERATIONS_POSTGRES_PORT=5441
+OPERATIONS_DATABASE_URL=postgresql://hotelier_operations_dev:hotelier_operations_dev_password@operations-service-db:5432/hotelier_operations_dev
+
+# Events-service dedicated Postgres instance
+EVENTS_POSTGRES_DB=hotelier_events_dev
+EVENTS_POSTGRES_USER=hotelier_events_dev
+EVENTS_POSTGRES_PASSWORD=hotelier_events_dev_password
+EVENTS_POSTGRES_PORT=5442
+EVENTS_DATABASE_URL=postgresql://hotelier_events_dev:hotelier_events_dev_password@events-service-db:5432/hotelier_events_dev
+
+# Restaurant-service dedicated Postgres instance
+RESTAURANT_POSTGRES_DB=hotelier_restaurant_dev
+RESTAURANT_POSTGRES_USER=hotelier_restaurant_dev
+RESTAURANT_POSTGRES_PASSWORD=hotelier_restaurant_dev_password
+RESTAURANT_POSTGRES_PORT=5443
+RESTAURANT_DATABASE_URL=postgresql://hotelier_restaurant_dev:hotelier_restaurant_dev_password@restaurant-service-db:5432/hotelier_restaurant_dev
+
+# Recreational-service dedicated Postgres instance
+RECREATIONAL_POSTGRES_DB=hotelier_recreational_dev
+RECREATIONAL_POSTGRES_USER=hotelier_recreational_dev
+RECREATIONAL_POSTGRES_PASSWORD=hotelier_recreational_dev_password
+RECREATIONAL_POSTGRES_PORT=5444
+RECREATIONAL_DATABASE_URL=postgresql://hotelier_recreational_dev:hotelier_recreational_dev_password@recreational-service-db:5432/hotelier_recreational_dev
+
+# Billing-service dedicated Postgres instance
+BILLING_POSTGRES_DB=hotelier_billing_dev
+BILLING_POSTGRES_USER=hotelier_billing_dev
+BILLING_POSTGRES_PASSWORD=hotelier_billing_dev_password
+BILLING_POSTGRES_PORT=5445
+BILLING_DATABASE_URL=postgresql://hotelier_billing_dev:hotelier_billing_dev_password@billing-service-db:5432/hotelier_billing_dev
+
+# Reports-service dedicated Postgres instance
+REPORTS_POSTGRES_DB=hotelier_reports_dev
+REPORTS_POSTGRES_USER=hotelier_reports_dev
+REPORTS_POSTGRES_PASSWORD=hotelier_reports_dev_password
+REPORTS_POSTGRES_PORT=5446
+REPORTS_DATABASE_URL=postgresql://hotelier_reports_dev:hotelier_reports_dev_password@reports-service-db:5432/hotelier_reports_dev
+
+# Audit-service dedicated Postgres instance
+AUDIT_POSTGRES_DB=hotelier_audit_dev
+AUDIT_POSTGRES_USER=hotelier_audit_dev
+AUDIT_POSTGRES_PASSWORD=hotelier_audit_dev_password
+AUDIT_POSTGRES_PORT=5447
+AUDIT_DATABASE_URL=postgresql://hotelier_audit_dev:hotelier_audit_dev_password@audit-service-db:5432/hotelier_audit_dev
+
+# Dashboard-service dedicated Postgres instance
+DASHBOARD_POSTGRES_DB=hotelier_dashboard_dev
+DASHBOARD_POSTGRES_USER=hotelier_dashboard_dev
+DASHBOARD_POSTGRES_PASSWORD=hotelier_dashboard_dev_password
+DASHBOARD_POSTGRES_PORT=5448
+DASHBOARD_DATABASE_URL=postgresql://hotelier_dashboard_dev:hotelier_dashboard_dev_password@dashboard-service-db:5432/hotelier_dashboard_dev
