chore(infra): optimize rabbitmq healthcheck configuration
- Increase healthcheck interval from 5s to 10s to reduce overhead
- Increase healthcheck timeout from 5s to 10s for better reliability
- Reduce healthcheck retries from 20 to 10 for faster failure detection
- Add 30s start_period to allow rabbitmq adequate time to initialize
- Prevents premature container restarts during startup phase

--- a/compose.yaml
+++ b/compose.yaml
@@ -412,9 +412,10 @@ services:
       - "15672:15672"
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "-q", "check_port_listener", "5672"]
-      interval: 5s
-      timeout: 5s
-      retries: 20
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   pgadmin:
     image: dpage/pgadmin4
