--- a/compose.yaml
+++ b/compose.yaml
@@ -404,9 +404,12 @@ services:
       start_period: 10s
 
   rabbitmq:
-    image: rabbitmq:3-management
+    build:
+      context: ./rabbitmq
+      dockerfile: Dockerfile
     container_name: hotelier-rabbitmq-dev
     restart: unless-stopped
+    hostname: rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
